Fixed file counter alignment

--- a/app/css modules/uploader.css
+++ b/app/css modules/uploader.css
@@ -25,7 +25,7 @@
     position: absolute;
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: flex-start;
     width: 100%;
     z-index: 1
 }
@@ -168,10 +168,6 @@
 
 @media only screen and (min-width: 600px) {
     .fileCounter {
-        position: absolute;
         flex-direction: row;
-        display: flex;
-        width: 100%;
-        z-index: 1
     }
 }
